# supletivo-brasil-backend

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONVENTION.md  ENV_README.md  README.md  RUNBOOK.md  backup.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  shared_metrics.py  shared_metrics_template.py
address/: .dockerignore  .env.example  README.md  TODO  pyproject.toml
address/.claude/: CLAUDE.md
address/address/: .env.example  .gitignore  API.md  Dockerfile  README.md  address-service.service
address/app/: db.py  exceptions.py  main.py  metrics.py
address/tests/: __init__.py  conftest.py  test_address_service.py  test_schemas.py  test_validators.py
ai/: Dockerfile  README.md  pyproject.toml
ai/.claude/: CLAUDE.md
ai/ai/: .env.example  .gitignore  Makefile  SINCRONIZACAO_2026-05-22.md  pyproject.toml
ai/alembic/: env.py
ai/app/: config.py  db.py  main.py  metrics.py
asaas/: .env.example  .gitignore  INTEGRATION.md  MIGRACAO_F3.md  README.md  SYNC_REPORT.md  TODO  alembic.ini  coverage.json  pyproject.toml  pytest.ini
asaas/.claude/: CLAUDE.md
asaas/alembic/: env.py  script.py.mako
asaas/app/: config.py  config_store.py  db.py  exceptions.py  main.py  metrics.py
asaas/asaas-app/: .env.example  API.md  Dockerfile  Makefile
asaas/fastapi-mcp-demo/: app.py
asaas/internal-sink/: app.py
asaas/tests/: conftest.py  test_charge_service.py  test_customer_service.py  test_list_ordering.py  test_notifications.py  test_outbound_queue.py  test_payment_service.py  test_payment_submit_recovery.py  test_pixkey_service.py  test_routes_charge.py  test_routes_meta.py  test_routes_payment.py  test_routes_pixkey.py  test_security_validator.py  test_settings.py  test_webhook.py
asaas/tests_pg/: conftest.py  test_duplicate_pg.py
auth/: .env.example  Dockerfile  Makefile  README.md  TODO  pyproject.toml
auth/.claude/: CLAUDE.md
auth/alembic/: env.py
auth/app/: config.py  db.py  exceptions.py  main.py  metrics.py
auth/auth/: SYNC_REPORT.md  alembic.ini  pyproject.toml
auth/tests/: conftest.py  test_check.py  test_recover.py  test_register_provision.py  test_role_logic.py
candidate/: .coverage  .env.example  .gitignore  GAPS.md  README.md  TODO  pyproject.toml  requirements.txt
candidate/.claude/: CLAUDE.md
candidate/alembic/: env.py
candidate/app/: config.py  db.py  dependencies.py  exceptions.py  main.py  metrics.py
candidate/tests/: conftest.py  test_demilitarized.py  test_funnel.py  test_health.py
commissions/: .env.example  =24.1  Dockerfile  Makefile  README.md  TODO  pyproject.toml
commissions/.claude/: CLAUDE.md
commissions/alembic/: env.py
commissions/app/: config.py  db.py  main.py  metrics.py
commissions/tests/: conftest.py  test_commissions.py  test_processing.py
coordinator/: .env.example  README.md  TODO  pyproject.toml
coordinator/.claude/: CLAUDE.md
coordinator/alembic/: env.py
coordinator/app/: config.py  db.py  main.py  metrics.py
coordinator/tests/: conftest.py  test_api.py  test_coordinator_svc.py  test_diploma_svc.py  test_document_svc.py  test_exam_svc.py  test_fee_svc.py  test_training_svc.py
documents/: .env.example  Dockerfile  README.md  TODO  pyproject.toml
documents/.claude/: CLAUDE.md
documents/alembic/: env.py
documents/app/: config.py  db.py  exceptions.py  main.py  metrics.py
enrollment/: .dockerignore  .env.example  MIGRACAO.md  README.md  TODO  pyproject.toml
enrollment/.claude/: CLAUDE.md
enrollment/alembic/: env.py
enrollment/app/: config.py  db.py  dependencies.py  exceptions.py  main.py  metrics.py
enrollment/tests/: conftest.py  test_enrollment_aggregate.py  test_funnel.py  test_health.py  test_webhooks.py
enrollment/wiki/: enrollment.md
fees/: .coverage  .env.example  .gitignore  Makefile  README.md  TODO  pyproject.toml
fees/.claude/: CLAUDE.md
fees/alembic/: env.py
fees/app/: config.py  db.py  dependencies.py  exceptions.py  main.py  metrics.py
fees/tests/: conftest.py  test_fee_service.py  test_fees.py  test_health.py
hub/: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  TODO  pyproject.toml
hub/.claude/: CLAUDE.md
hub/alembic/: env.py
hub/app/: __init__.py  config.py  db.py  dependencies.py  exceptions.py  main.py  metrics.py  seed.py
hub/tests/: conftest.py  test_health.py  test_hub_read.py  test_hub_seed.py  test_hub_write.py
infinitepay/: .env.example  Dockerfile  MIGRACAO_F3.md  README.md  SYNC-REMOTO-2026-05-22.md  pyproject.toml
infinitepay/.claude/: CLAUDE.md
infinitepay/alembic/: env.py
infinitepay/app/: config.py  db.py  main.py  metrics.py
infinitepay/deploy/: infinitepay-api.service  infinitepay-worker.service  install-remote-cli.sh
infinitepay/tests/: conftest.py  test_api.py  test_checkout.py  test_checkout_flow.py  test_config_flow.py  test_health.py  test_integration_health_auth.py  test_integration_verification.py  test_queue.py  test_remote_cli.py  test_validators.py  test_webhook.py
jwt/: .env.example  Dockerfile  README.md  pyproject.toml
jwt/.claude/: CLAUDE.md
jwt/alembic/: env.py
jwt/app/: __init__.py  config.py  db.py  exceptions.py  main.py  metrics.py
jwt/jwt/: .gitignore  README.md  RELATORIO_PENTEST.md  RELATORIO_SINCRONIZACAO.md
lead/: .coverage  .env.example  .gitignore  ALTERACOES.md  Dockerfile  README.md  pyproject.toml
lead/.claude/: CLAUDE.md  NEXT_SESSION_PROMPT.md
lead/alembic/: env.py
lead/app/: config.py  db.py  dependencies.py  main.py  metrics.py
lead/tests/: conftest.py  test_dependencies.py  test_health.py  test_integrations.py  test_metrics.py  test_models.py  test_public_auth.py  test_routes_leads.py  (+5 more)
notify/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
otp/: .env.example  Makefile  README.md  pyproject.toml
profiles/: .env.example  Dockerfile  Makefile  README.md  RELATORIO_SYNC.md  pyproject.toml
staff/: .env.example  .gitignore  CLAUDE.md  README.md  TODO  pyproject.toml
training/: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO  pyproject.toml
(+1228 files in other folders)
