[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "asaas-app"
version = "0.1.0"
description = "Middleware de pagamentos PIX sobre a API Asaas v3"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = [
    "B008",    # Depends(get_session) é o padrao FastAPI
    "N818",    # DomainError, ValidationError etc. seguem convencao nossa
]

[tool.ruff.lint.per-file-ignores]
"app/api/config.py" = ["E501"]
"app/main.py" = ["E501"]
