[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "auth-service"
version = "0.1.0"
description = "Servico de autenticacao — identidades, RBAC, JWT, OTP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "prometheus-client>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.8.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.0.0",
    "pyjwt[crypto]>=2.10.0",
    "cryptography>=44.0.0",
    "niquests>=3.0.0",
    "httpx>=0.28.0",
    "fastapi-structured-logging>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
