[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "candidate-app"
version = "0.1.0"
description = "Funil de cadastro de candidatos a promotor (aspirantes)"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "structlog>=24.4",
    "pyjwt>=2.9",
    "cryptography>=44",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = [
    "B008",    # Depends(...) é o padrao FastAPI
    "N818",    # DomainError/ValidationError seguem convencao nossa
]
