[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "commissions-service"
version = "0.1.0"
description = "Microsserviço de cálculo e pagamento de comissões (Parte B - Sprint futuro)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "alembic>=1.13",
    "asyncpg>=0.31.0",
    "slowapi>=0.1.9",
    "httpx>=0.28",
    "structlog>=25.5.0",
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "coverage>=7.14.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"


[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*", "*/__pycache__/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
