[project]
name = "documents-service"
version = "1.0.0"
description = "Document storage microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.14.0",
    "structlog>=24.0.0",
    "pydantic-settings>=2.8.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
]
