[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "hub"
version = "0.1.0"
description = "Servico de polos (hub) — endereco + marca + coordenador; base dos papeis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34.0",
    "prometheus-client>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "fastapi-structured-logging>=1.0",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.10",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6", "httpx>=0.27"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# conftest precisa definir DATABASE_URL antes de importar app.* (imports nao-no-topo).
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
