[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jwt"
version = "1.0.0"
description = "Microsservico de emissao e gerenciamento de tokens JWT"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34.0",
    "prometheus-client>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "alembic>=1.13",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*", "*/__pycache__/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
