[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "notify"
version = "0.5.0"
description = "Servico de notificacao multicanal — SMTP (mail merge) e WhatsApp (Evolution GO)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "anyio>=4.13.0",
    "elevenlabs>=2.45.0",
    "dnspython>=2.8.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
