[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "otp"
version = "0.2.0"
description = "Microsserviço OTP — geração e validação de códigos descartáveis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34.0",
    "prometheus-client>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]


[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*", "*/__pycache__/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
