[project]
name = "infinitepay"
version = "0.1.0"
description = "InfinitePay checkout integration API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "email-validator>=2.1",
    "structlog>=24.4",
    "cryptography>=42",
    "openai>=2.34.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
